# 3xui-shop

./: .env.example  .gitignore  Dockerfile  PRODUCT_INTEGRATION_GUIDE.md  PRODUCT_INTEGRATION_IMPLEMENTATION.md  README.md  README.ru_RU.md  TESTING_SUMMARY.md  docker-compose.yml  env.sh  implementation_guide.md  migration_plan.md  pyproject.toml  run.sh
app/: __main__.py  config.py
app/bot/middlewares/: database.py
app/bot/models/: product_data.py  services_container.py
app/bot/payment_gateways/: __init__.py  _gateway.py  gateway_factory.py
app/bot/routers/: __init__.py
app/bot/routers/admin_tools/: __init__.py  keyboard.py  product_handler.py  server_handler.py  server_handler_original.py.bak
app/bot/routers/catalog/: delivery_handler.py  handler.py  keyboard.py  purchase_keyboard.py
app/bot/routers/download/: handler.py
app/bot/routers/main_menu/: handler.py  keyboard.py
app/bot/routers/profile/: handler.py  keyboard.py
app/bot/routers/referral/: handler.py
app/bot/routers/subscription/: promocode_handler.py  subscription_handler.py  trial_handler.py
app/bot/services/: __init__.py  product.py  referral.py  subscription.py
app/bot/utils/: constants.py  navigation.py
app/data/: products.json
app/db/migration/versions/: 569b5fa1b4d6_remove_vpn_and_server_fields_from_users.py
app/db/models/: __init__.py  user.py
app/locales/en/LC_MESSAGES/: bot.po
app/locales/ru/LC_MESSAGES/: bot.po
app/locales/zh/LC_MESSAGES/: bot.po
data/: products.json
doc/: Buy_Subscription_API_Specification.md  CONDA_SETUP.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  README.md  README.ru_RU.md  README.zh_CN.md  README_Chinese_Localization.md  README_EN.md  UI_FIXES_IMPLEMENTATION_REPORT.md  implementation_checklist.md
examples/: migration_script.py  new_models.py  product_service.py  products.json
test/: test_translations.py
tests/: README.md  __init__.py  conftest.py  test_integration.py  test_middlewares.py  test_models.py  test_payment_gateways.py  test_services.py  test_utils.py
