[tool.poetry]
name = "3xui-shop"
version = "1.0.0"
description = "This is a Telegram bot for selling digital products. Supports various electronic goods and services."
authors = ["snoups"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
babel = "^2.16.0"
environs = "^11.2.1"
cachetools = "^5.5.0"
requests = "^2.31.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
redis = "^5.2.1"
apscheduler = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
